kubernetes-services/additions/istio-gateway/istio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
  name: istio
spec:
  controller: istio.io/ingress-controller
