kubernetes-services/additions/istio-gateway/gateway-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-metrics
  labels:
    app: gateway
spec:
  ports:
    - name: metrics
      port: 15090
  selector:
    app: istio-gateway
    istio: gateway
