kubernetes-services/additions/istio-gateway/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: non-tls-gateway
spec:
  selector:
    istio: gateway
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - "*"
